# gvsoc-core

./: .gitignore  CMakeLists.txt  debug_binary_0_rv64uv-p-vadd.debugInfo  debug_binary_0_rv64uv-p-vfadd.debugInfo  gvsoc_config.json  requirements.txt
engine/: CMakeLists.txt  gsystree.py
engine/gv/: gtkwave.py  gvsoc_control.py  gvsoc_runner.py
engine/include/: json.hpp
engine/include/gv/: dpi_chip_wrapper.hpp  gvsoc.h  gvsoc.hpp  power.hpp  testbench.hpp
engine/include/vp/: block.hpp  clocked_signal.hpp  component.hpp  component_tree.hpp  controller.hpp  fault_injector.hpp  json.hpp  launcher.hpp  mapping_tree.hpp  memcheck.hpp  ports.hpp  proxy.hpp  proxy_client.hpp  queue.hpp  register.hpp  signal.hpp  top.hpp  vp.hpp  vp_data.hpp
engine/python/gv/: gvsoc_runner.py
engine/regmap/: regmap.py
engine/src/: block.cpp  component.cpp  json.cpp  launcher.cpp  launcher_client.cpp  main.cpp  main_systemc.cpp  main_systemc.hpp  mapping_tree.cpp  memcheck.cpp  ports.cpp  proxy.cpp  proxy_client.cpp  queue.cpp  register.cpp  signal.cpp  stats.cpp  time_engine.cpp  time_scheduler.cpp  top.cpp  vp.cpp
engine/src/clock/: block_clock.cpp  clock.cpp  clock_engine.cpp  clock_event.cpp
engine/src/power/: block_power.cpp  component_power.cpp  power_engine.cpp  power_source.cpp  power_table.cpp  power_trace.cpp
engine/src/time/: block_time.cpp  time_engine.cpp  time_event.cpp
engine/src/trace/: event.cpp  fst.cpp  lxt2.cpp  raw.cpp  trace.cpp  trace_domain_impl.cpp  trace_engine.cpp  vcd.cpp
engine/vp/: CMakeLists.txt  clock_domain_impl.cpp  time_engine.cpp  trace_domain_impl.cpp
models/: CMakeLists.txt  gsystree.py  json_tools.py
models/board/: CMakeLists.txt  reset.cpp  reset.py  switch.py  switch_impl.cpp
models/cache/: CMakeLists.txt  cache.py  cache_acc.cpp  cache_impl.cpp  cache_impl_v2.cpp  cache_v3.cpp  cache_v3.py  cache_v3_config.py  cache_v4.cpp  cache_v4.py  hierarchical_cache.py
models/cpu/: CMakeLists.txt  clint.cpp  clint.py  dwarf_trace.hpp  plic.cpp  plic.py
models/cpu/emulation/: CMakeLists.txt  emulation.cpp
models/cpu/iss/: CMakeLists.txt  core_emulation.py  iss.py  riscv.py
models/cpu/iss_v2/: riscv.py  riscv_config.py
models/devices/: CMakeLists.txt
models/devices/ble/: CMakeLists.txt  nina_b112.cpp  nina_b112.hpp  nina_b112_cmd_parser.cpp
models/devices/camera/: CMakeLists.txt  himax.cpp  himax.py
models/devices/cv32e40p_exit/: CMakeLists.txt  cv32e40p_exit_device.cpp
models/devices/flash/: CMakeLists.txt  flash.py  mx25uw6445g.cpp  mx25uw6445g.py
models/devices/gpio/: CMakeLists.txt  fxl6408.cpp  fxl6408.py
models/devices/hyperbus/: CMakeLists.txt  hyperflash.py  hyperflash_impl.cpp  hyperram.py  hyperram_impl.cpp
models/devices/i2c/: CMakeLists.txt  i2c_bus.cpp  i2c_bus.py
models/devices/jtag/: CMakeLists.txt  ocd_jtag_bitbang.cpp
models/devices/ram/: CMakeLists.txt  aps256xxn.cpp  aps256xxn.py
models/devices/sound/: CMakeLists.txt  i2s_clock.cpp  i2s_microphone.cpp  i2s_microphone.py  i2s_speaker.cpp  i2s_speaker.py  transfer_function.cpp  transfer_function.py
models/devices/spiflash/: CMakeLists.txt  atxp032.py  spiflash.py  spiflash_impl.cpp
models/devices/testbench/: CMakeLists.txt  i2s.hpp  i2s_verif.cpp  i2s_verif.hpp  spim_verif.cpp  spim_verif.hpp  testbench.cpp  testbench.hpp  testbench.py
models/devices/uart/: CMakeLists.txt  ns16550.cpp  ns16550.py  uart_checker.cpp  uart_checker.py  uart_vip.cpp  uart_vip.py
models/devices/utils/: uart_adapter.cpp  uart_adapter.hpp  uart_adapter.py
models/fault_injection/: README.md  fic.cpp  fic.py
models/gdbserver/: CMakeLists.txt  gdbserver.cpp  gdbserver.hpp  gdbserver.py  rsp.cpp  rsp.hpp
models/gv/: gui.py  gvsoc_control.py  gvsoc_runner.py
models/gvsoc/: gtkwave.py  gui.py  gvsoc_control.py  json_tools.py  runner.py  runner_gvrun2.py  systree.py  systree_gvrun.py  systree_gvrun2.py
models/gvsoc/chips/: gap8.py  gap9_v2.py  (+2 more)
models/interco/: CMakeLists.txt  bus_watchpoint.cpp  bus_watchpoint.py  converter.py  converter_impl.cpp  demux.cpp  demux.py  demux_config.py  demux_v2.cpp  demux_v2.py  dual_wireless_link_impl.cpp  fifo_v2.cpp  fifo_v2.py  interleaver.py  interleaver_acc.cpp  interleaver_impl.cpp  interleaver_snitch.py  limiter.cpp  limiter.py  limiter_config.py  limiter_v2.cpp  limiter_v2.py  log_ico.cpp  log_ico.py  log_ico_config.py  log_ico_v2.cpp  log_ico_v2.py  remapper.cpp  remapper.py  remapper_config.py  remapper_v2.cpp  remapper_v2.py  router.cpp  router.py  router_config.py  router_impl.cpp  router_proxy.cpp  router_proxy.py  router_shared_async_impl.cpp  router_shared_fullduplex_impl.cpp  (+18 more)
models/memory/: CMakeLists.txt  ddr_impl.cpp  dramsys.cpp  dramsys.py  dramsys_v2.cpp  memory.cpp  memory.py  memory_config.py  memory_impl.cpp  memory_memcheck.hpp  memory_v2.cpp  memory_v2.py  memory_v3.cpp  memory_v3.py  pim_component.cpp  pim_component.py
models/reggen/: gen_selfdoc.py
models/regmap/: regmap.py  regmap_c_header.py  regmap_hjson.py  regmap_ipxact.py  regmap_json.py  regmap_md.py  regmap_md_mistune.py  regmap_rst.py  regmap_table.py  regmap_xls.py
models/utils/: CMakeLists.txt  clock_divider.cpp  clock_divider.py  clock_generator.py  clock_impl.cpp  clock_mux.cpp  clock_mux.py  common_cells.py  composite.hpp  composite_impl.cpp  dpi_chip_wrapper.cpp  fsdb_dumper.cpp  fsdb_dumper.py  fst_dumper.cpp  fst_dumper.py  io_v2_beat_adapter.cpp  io_v2_beat_adapter.hpp  io_v2_beat_adapter.py  io_v2_beat_collapse_adapter.cpp  io_v2_beat_collapse_adapter.py  io_v2_beat_sync_adapter.cpp  io_v2_beat_sync_adapter.hpp  io_v2_beat_sync_adapter.py  io_v2_beat_to_single_req_adapter.cpp  io_v2_beat_to_single_req_adapter.hpp  io_v2_beat_to_single_req_adapter.py  io_v2_beat_to_sync_adapter.cpp  io_v2_beat_to_sync_adapter.hpp  io_v2_beat_to_sync_adapter.py  io_v2_clock_bridge.cpp  io_v2_clock_bridge.hpp  io_v2_clock_bridge.py  vcd_dumper.cpp  vcd_dumper.py  verilator.cpp  verilator.py  verilator_plugin.h  verilator_plugin_helpers.hpp  watchpoint_alias.cpp  watchpoint_alias.py
models/vp/: CMakeLists.txt  clock_domain.py  clock_engine_module.cpp
(+1072 files in other folders)
